--- a/index.html
+++ b/index.html
@@ -17,6 +17,6 @@
 			<span class="val"></span>
 		</div>
 	</div>
-<script src="./_build.js"></script>
+<script src="build.js"></script>
 </body>
 </html>
